footer github link alignment fix

--- a/src/site/docs/src/css/custom.css
+++ b/src/site/docs/src/css/custom.css
@@ -1514,6 +1514,9 @@ table tr:nth-child(2n) {
         margin: 0 auto;
         margin-bottom: 15px;
     }
+    .logo-column .header-github-link{
+        display: inline-flex !important;
+    }
 }
 
 .custom-code-block {
